Jump to first resolved symbol

--- a/Tools/CppDoc/UnitTest_Cases/Cpp.css
+++ b/Tools/CppDoc/UnitTest_Cases/Cpp.css
@@ -15,7 +15,9 @@ body {
 }
 
 .focused {
-    font-size: 20px;
+    font-size: 28px;
+    color: #000000;
+    background-color: #FFFF00;
 }
 
 .def {
